build/parser.output
Terminals unused in grammar

    SQRBO
    SQRBC
    NEWLINE


Grammar

    0 $accept: Start $end

    1 Start: Stmt_list

    2 Stmt_list: Stmt
    3          | Stmt_list Stmt

    4 Stmt: Variable ASSIGN Expression END

    5 $@1: ε

    6 $@2: ε

    7 Stmt: IF STRBO Expression STRBC $@1 CURBO Stmt_list CURBC $@2 ELSE CURBO Stmt_list CURBC

    8 $@3: ε

    9 $@4: ε

   10 Stmt: WHILE $@3 STRBO Expression STRBC $@4 CURBO Stmt_list CURBC

   11 Variable: ID

   12 Expression: Simple_expression
   13           | Simple_expression RELOP Simple_expression

   14 Simple_expression: Term
   15                  | Simple_expression ADDOP Term

   16 Term: Factor
   17     | Term MULOP Factor

   18 Factor: ID
   19       | NUM
   20       | STRBO Expression STRBC
   21       | NOT Factor


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <STRING> (258) 11 18
    NUM <VALUE> (259) 19
    RELOP <STRING> (260) 13
    ADDOP <STRING> (261) 15
    MULOP <STRING> (262) 17
    ASSIGN <STRING> (263) 4
    NOT (264) 21
    SQRBO (265)
    SQRBC (266)
    STRBO (267) 7 10 20
    STRBC (268) 7 10 20
    END (269) 4
    NEWLINE (270)
    CURBO (271) 7 10
    CURBC (272) 7 10
    IF (273) 7
    ELSE (274) 7
    WHILE (275) 10


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    Start (22)
        on left: 1
        on right: 0
    Stmt_list (23)
        on left: 2 3
        on right: 1 3 7 10
    Stmt (24)
        on left: 4 7 10
        on right: 2 3
    $@1 (25)
        on left: 5
        on right: 7
    $@2 (26)
        on left: 6
        on right: 7
    $@3 (27)
        on left: 8
        on right: 10
    $@4 (28)
        on left: 9
        on right: 10
    Variable <STRING> (29)
        on left: 11
        on right: 4
    Expression <STRING> (30)
        on left: 12 13
        on right: 4 7 10 20
    Simple_expression <STRING> (31)
        on left: 14 15
        on right: 12 13 15
    Term <STRING> (32)
        on left: 16 17
        on right: 14 15 17
    Factor <STRING> (33)
        on left: 18 19 20 21
        on right: 16 17 21


State 0

    0 $accept: • Start $end

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    Start      go to state 4
    Stmt_list  go to state 5
    Stmt       go to state 6
    Variable   go to state 7


State 1

   11 Variable: ID •

    $default  reduce using rule 11 (Variable)


State 2

    7 Stmt: IF • STRBO Expression STRBC $@1 CURBO Stmt_list CURBC $@2 ELSE CURBO Stmt_list CURBC

    STRBO  shift, and go to state 8


State 3

   10 Stmt: WHILE • $@3 STRBO Expression STRBC $@4 CURBO Stmt_list CURBC

    $default  reduce using rule 8 ($@3)

    $@3  go to state 9


State 4

    0 $accept: Start • $end

    $end  shift, and go to state 10


State 5

    1 Start: Stmt_list •
    3 Stmt_list: Stmt_list • Stmt

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    $default  reduce using rule 1 (Start)

    Stmt      go to state 11
    Variable  go to state 7


State 6

    2 Stmt_list: Stmt •

    $default  reduce using rule 2 (Stmt_list)


State 7

    4 Stmt: Variable • ASSIGN Expression END

    ASSIGN  shift, and go to state 12


State 8

    7 Stmt: IF STRBO • Expression STRBC $@1 CURBO Stmt_list CURBC $@2 ELSE CURBO Stmt_list CURBC

    ID     shift, and go to state 13
    NUM    shift, and go to state 14
    NOT    shift, and go to state 15
    STRBO  shift, and go to state 16

    Expression         go to state 17
    Simple_expression  go to state 18
    Term               go to state 19
    Factor             go to state 20


State 9

   10 Stmt: WHILE $@3 • STRBO Expression STRBC $@4 CURBO Stmt_list CURBC

    STRBO  shift, and go to state 21


State 10

    0 $accept: Start $end •

    $default  accept


State 11

    3 Stmt_list: Stmt_list Stmt •

    $default  reduce using rule 3 (Stmt_list)


State 12

    4 Stmt: Variable ASSIGN • Expression END

    ID     shift, and go to state 13
    NUM    shift, and go to state 14
    NOT    shift, and go to state 15
    STRBO  shift, and go to state 16

    Expression         go to state 22
    Simple_expression  go to state 18
    Term               go to state 19
    Factor             go to state 20


State 13

   18 Factor: ID •

    $default  reduce using rule 18 (Factor)


State 14

   19 Factor: NUM •

    $default  reduce using rule 19 (Factor)


State 15

   21 Factor: NOT • Factor

    ID     shift, and go to state 13
    NUM    shift, and go to state 14
    NOT    shift, and go to state 15
    STRBO  shift, and go to state 16

    Factor  go to state 23


State 16

   20 Factor: STRBO • Expression STRBC

    ID     shift, and go to state 13
    NUM    shift, and go to state 14
    NOT    shift, and go to state 15
    STRBO  shift, and go to state 16

    Expression         go to state 24
    Simple_expression  go to state 18
    Term               go to state 19
    Factor             go to state 20


State 17

    7 Stmt: IF STRBO Expression • STRBC $@1 CURBO Stmt_list CURBC $@2 ELSE CURBO Stmt_list CURBC

    STRBC  shift, and go to state 25


State 18

   12 Expression: Simple_expression •
   13           | Simple_expression • RELOP Simple_expression
   15 Simple_expression: Simple_expression • ADDOP Term

    RELOP  shift, and go to state 26
    ADDOP  shift, and go to state 27

    $default  reduce using rule 12 (Expression)


State 19

   14 Simple_expression: Term •
   17 Term: Term • MULOP Factor

    MULOP  shift, and go to state 28

    $default  reduce using rule 14 (Simple_expression)


State 20

   16 Term: Factor •

    $default  reduce using rule 16 (Term)


State 21

   10 Stmt: WHILE $@3 STRBO • Expression STRBC $@4 CURBO Stmt_list CURBC

    ID     shift, and go to state 13
    NUM    shift, and go to state 14
    NOT    shift, and go to state 15
    STRBO  shift, and go to state 16

    Expression         go to state 29
    Simple_expression  go to state 18
    Term               go to state 19
    Factor             go to state 20


State 22

    4 Stmt: Variable ASSIGN Expression • END

    END  shift, and go to state 30


State 23

   21 Factor: NOT Factor •

    $default  reduce using rule 21 (Factor)


State 24

   20 Factor: STRBO Expression • STRBC

    STRBC  shift, and go to state 31


State 25

    7 Stmt: IF STRBO Expression STRBC • $@1 CURBO Stmt_list CURBC $@2 ELSE CURBO Stmt_list CURBC

    $default  reduce using rule 5 ($@1)

    $@1  go to state 32


State 26

   13 Expression: Simple_expression RELOP • Simple_expression

    ID     shift, and go to state 13
    NUM    shift, and go to state 14
    NOT    shift, and go to state 15
    STRBO  shift, and go to state 16

    Simple_expression  go to state 33
    Term               go to state 19
    Factor             go to state 20


State 27

   15 Simple_expression: Simple_expression ADDOP • Term

    ID     shift, and go to state 13
    NUM    shift, and go to state 14
    NOT    shift, and go to state 15
    STRBO  shift, and go to state 16

    Term    go to state 34
    Factor  go to state 20


State 28

   17 Term: Term MULOP • Factor

    ID     shift, and go to state 13
    NUM    shift, and go to state 14
    NOT    shift, and go to state 15
    STRBO  shift, and go to state 16

    Factor  go to state 35


State 29

   10 Stmt: WHILE $@3 STRBO Expression • STRBC $@4 CURBO Stmt_list CURBC

    STRBC  shift, and go to state 36


State 30

    4 Stmt: Variable ASSIGN Expression END •

    $default  reduce using rule 4 (Stmt)


State 31

   20 Factor: STRBO Expression STRBC •

    $default  reduce using rule 20 (Factor)


State 32

    7 Stmt: IF STRBO Expression STRBC $@1 • CURBO Stmt_list CURBC $@2 ELSE CURBO Stmt_list CURBC

    CURBO  shift, and go to state 37


State 33

   13 Expression: Simple_expression RELOP Simple_expression •
   15 Simple_expression: Simple_expression • ADDOP Term

    ADDOP  shift, and go to state 27

    $default  reduce using rule 13 (Expression)


State 34

   15 Simple_expression: Simple_expression ADDOP Term •
   17 Term: Term • MULOP Factor

    MULOP  shift, and go to state 28

    $default  reduce using rule 15 (Simple_expression)


State 35

   17 Term: Term MULOP Factor •

    $default  reduce using rule 17 (Term)


State 36

   10 Stmt: WHILE $@3 STRBO Expression STRBC • $@4 CURBO Stmt_list CURBC

    $default  reduce using rule 9 ($@4)

    $@4  go to state 38


State 37

    7 Stmt: IF STRBO Expression STRBC $@1 CURBO • Stmt_list CURBC $@2 ELSE CURBO Stmt_list CURBC

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    Stmt_list  go to state 39
    Stmt       go to state 6
    Variable   go to state 7


State 38

   10 Stmt: WHILE $@3 STRBO Expression STRBC $@4 • CURBO Stmt_list CURBC

    CURBO  shift, and go to state 40


State 39

    3 Stmt_list: Stmt_list • Stmt
    7 Stmt: IF STRBO Expression STRBC $@1 CURBO Stmt_list • CURBC $@2 ELSE CURBO Stmt_list CURBC

    ID     shift, and go to state 1
    CURBC  shift, and go to state 41
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    Stmt      go to state 11
    Variable  go to state 7


State 40

   10 Stmt: WHILE $@3 STRBO Expression STRBC $@4 CURBO • Stmt_list CURBC

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    Stmt_list  go to state 42
    Stmt       go to state 6
    Variable   go to state 7


State 41

    7 Stmt: IF STRBO Expression STRBC $@1 CURBO Stmt_list CURBC • $@2 ELSE CURBO Stmt_list CURBC

    $default  reduce using rule 6 ($@2)

    $@2  go to state 43


State 42

    3 Stmt_list: Stmt_list • Stmt
   10 Stmt: WHILE $@3 STRBO Expression STRBC $@4 CURBO Stmt_list • CURBC

    ID     shift, and go to state 1
    CURBC  shift, and go to state 44
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    Stmt      go to state 11
    Variable  go to state 7


State 43

    7 Stmt: IF STRBO Expression STRBC $@1 CURBO Stmt_list CURBC $@2 • ELSE CURBO Stmt_list CURBC

    ELSE  shift, and go to state 45


State 44

   10 Stmt: WHILE $@3 STRBO Expression STRBC $@4 CURBO Stmt_list CURBC •

    $default  reduce using rule 10 (Stmt)


State 45

    7 Stmt: IF STRBO Expression STRBC $@1 CURBO Stmt_list CURBC $@2 ELSE • CURBO Stmt_list CURBC

    CURBO  shift, and go to state 46


State 46

    7 Stmt: IF STRBO Expression STRBC $@1 CURBO Stmt_list CURBC $@2 ELSE CURBO • Stmt_list CURBC

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    Stmt_list  go to state 47
    Stmt       go to state 6
    Variable   go to state 7


State 47

    3 Stmt_list: Stmt_list • Stmt
    7 Stmt: IF STRBO Expression STRBC $@1 CURBO Stmt_list CURBC $@2 ELSE CURBO Stmt_list • CURBC

    ID     shift, and go to state 1
    CURBC  shift, and go to state 48
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    Stmt      go to state 11
    Variable  go to state 7


State 48

    7 Stmt: IF STRBO Expression STRBC $@1 CURBO Stmt_list CURBC $@2 ELSE CURBO Stmt_list CURBC •

    $default  reduce using rule 7 (Stmt)
